--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,14 +1,13 @@
-body {
-  background: pink;
-}
 h1 {
+  color: black;
   font-family: "Playfair Display SC", serif;
-  font-family: bold;
-  color: white;
-  text-align: center;
+  font-weight: bold;
 }
 p {
-  font-family: "Playfair Display SC", serif;
+  font-family: "poppins", sans-serif;
   font-weight: normal;
+}
+.hero {
+  background: #f9f7fe;
   text-align: center;
 }
