--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,7 +1,15 @@
-h1 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: black;
   font-family: "Playfair Display SC", serif;
   font-weight: bold;
+}
+h1 {
+  font-size: 96px;
 }
 p {
   font-family: "poppins", sans-serif;
@@ -10,4 +18,16 @@ p {
 .hero {
   background: #f9f7fe;
   text-align: center;
+}
+.hero p {
+  font-size: 36px;
+  font-weight: bold;
+  margin: 0;
+  color: #272142;
+}
+.hero h2 {
+  font-family: "poppins", sans-serif;
+  font-weight: normal;
+  font-size: 24px;
+  line-height: 2;
 }
