--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,3 +1,12 @@
+:root {
+  --branding-color: #6c63ff;
+  --secondary-color: #f9f7fe;
+  --heading-font-family: "Playfair Display SC", serif;
+  --default-font-family: "poppins", sans-serif;
+}
+body {
+  font-family: var(--default-font-family);
+}
 h1,
 h2,
 h3,
@@ -5,18 +14,17 @@ h4,
 h5,
 h6 {
   color: black;
-  font-family: "Playfair Display SC", serif;
+  font-family: var(--heading-font-family);
   font-weight: bold;
 }
 h1 {
   font-size: 96px;
 }
 p {
-  font-family: "poppins", sans-serif;
   font-weight: normal;
 }
 .hero {
-  background: #f9f7fe;
+  background: var(--secondary-color);
   text-align: center;
   padding: 160px 20px;
 }
@@ -27,13 +35,13 @@ p {
   color: #272142;
 }
 .hero h2 {
-  font-family: "poppins", sans-serif;
+  font-family: var(--heading-font-family);
   font-weight: normal;
   font-size: 24px;
   line-height: 2;
 }
 .btn-branding {
-  background: #6c63ff;
+  background: var(--branding-color);
   border-radius: 4px;
   color: white;
   font-size: 18px;
