--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,7 +26,8 @@ p {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px 20px;
+  padding: 160px;
+
   max-width: 100%;
 }
 .hero p {
