--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -26,9 +26,7 @@ p {
 .hero {
   background: var(--secondary-color);
   text-align: center;
-  padding: 160px;
-
-  max-width: 100%;
+  padding: 160px 20px;
 }
 .hero p {
   font-size: 36px;
