--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -62,5 +62,10 @@ p {
   padding: 15px 30px;
 }
 .project-description {
-  padding: 120px 60px;
+  padding: 0 30px;
+}
+@media (max-width: 960px) {
+  .project-description {
+    padding: 0;
+  }
 }
