--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -19,6 +19,7 @@ h6 {
 }
 h1 {
   font-size: 96px;
+  line-height: 1.5;
 }
 h2 {
   font-size: 64px;
@@ -65,6 +66,12 @@ p {
   padding: 0 30px;
 }
 @media (max-width: 900px) {
+  h1 {
+    font-size: 60px;
+  }
+  h2 {
+    font-size: 44px;
+  }
   .project-description {
     padding: 0;
     text-align: center;
