--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -44,7 +44,7 @@ p {
   font-family: var(--heading-font-family);
   font-weight: normal;
   font-size: 24px;
-  line-height: 2;
+  line-height: 1.5;
 }
 .btn-branding {
   background: var(--branding-color);
@@ -67,10 +67,14 @@ p {
 }
 @media (max-width: 900px) {
   h1 {
-    font-size: 60px;
+    font-size: 44px;
+    line-height: 1.5;
   }
   h2 {
     font-size: 44px;
+  }
+  .hero {
+    padding: 80px 20px;
   }
   .project-description {
     padding: 0;
