--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -46,6 +46,14 @@ p {
   font-size: 24px;
   line-height: 1.5;
 }
+.about-section h1 {
+  font-size: 64px;
+  line-height: 80px;
+}
+.about-section p {
+  font-size: 18px;
+  font-family: var(--default-font-family);
+}
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
