--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -41,19 +41,25 @@ p {
   color: #272142;
 }
 .hero h2 {
-  font-family: var(--heading-font-family);
   font-weight: normal;
   font-size: 24px;
   line-height: 1.5;
+}
+.about-section {
+  padding: 160px 40px;
 }
 .about-section h1 {
   font-size: 64px;
   line-height: 80px;
 }
-.about-section p {
+.about-section h2 {
   font-size: 18px;
   font-family: var(--default-font-family);
 }
+.about-section-content {
+  margin: 30px;
+}
+
 .btn-branding {
   background: var(--branding-color);
   border-radius: 4px;
