--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -48,16 +48,24 @@ p {
 .content-container {
   padding: 160px 40px;
 }
-.content-container h1 {
-  font-size: 64px;
+.content h1 {
+  font-size: 60px;
   line-height: 80px;
 }
-.content-container h2 {
+.content h2 {
   font-size: 18px;
+  font-family: var(--default-font-family);
+}
+.content h3 {
+  font-size: 24px;
+  line-height: 1.5;
   font-family: var(--default-font-family);
 }
 .content {
   margin: 30px;
+}
+.content p {
+  font-size: 14px;
 }
 
 .btn-branding {
@@ -87,10 +95,13 @@ p {
   h2 {
     font-size: 44px;
   }
+  h3 {
+    font-size: 44px;
+  }
   .hero {
     padding: 80px 20px;
   }
-  .content-container {
+  .content {
     text-align: center;
     padding: 0;
   }
