--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -90,6 +90,17 @@ p {
 .logo {
   max-width: 150px;
 }
+nav {
+  padding: 20px 0;
+}
+nav ul {
+  padding: 0;
+  margin: 0;
+}
+nav li {
+  display: inline;
+  line-height: 42px;
+}
 @media (max-width: 900px) {
   h1 {
     font-size: 44px;
