--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -100,6 +100,14 @@ nav ul {
 nav li {
   display: inline;
   line-height: 42px;
+  margin-left: 15px;
+}
+nav a {
+  text-decoration: none;
+  color: #272142;
+}
+nav a:hover {
+  color: var(--branding-color);
 }
 @media (max-width: 900px) {
   h1 {
