--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -88,7 +88,7 @@ p {
   padding: 0 30px;
 }
 .logo {
-  max-width: 150px;
+  max-height: 40px;
 }
 nav {
   padding: 20px 0;
@@ -99,6 +99,7 @@ nav ul {
 }
 nav li {
   display: inline;
+  list-style: none;
   line-height: 42px;
   margin-left: 15px;
 }
@@ -106,7 +107,9 @@ nav a {
   text-decoration: none;
   color: #272142;
 }
-nav a:hover {
+
+nav a:hover,
+nav li.active a {
   color: var(--branding-color);
 }
 @media (max-width: 900px) {
